Fix scrollbar

--- a/src/components/AppMenu.css
+++ b/src/components/AppMenu.css
@@ -1,5 +1,5 @@
 .AppMenu {
-  margin-top: 16px;
+  margin-top: 0px;
   margin-bottom: 16px;
   margin-left: 4px;
 }
